force-app/main/default/objects/UserManagementTemp__c/UserManagementTemp__c.object-meta.xml
<CustomObject>
    <description>B2B平台使用者帳號</description>
    <label>User Management Temp</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>User Management Temps</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>