force-app/main/default/objects/UserManagementTemp__c/fields/CN_Passport__c.field-meta.xml
<CustomField>
    <fullName>CN_Passport__c</fullName>
    <label>Chinese Passport</label>
    <length>255</length>
    <type>Text</type>
</CustomField>