force-app/main/default/objects/UserManagementTemp__c/fields/EN_Passport__c.field-meta.xml
<CustomField>
    <fullName>EN_Passport__c</fullName>
    <label>English Passport</label>
    <length>255</length>
    <type>Text</type>
</CustomField>