force-app/main/default/objects/UserManagementTemp__c/fields/IATA_Code__c.field-meta.xml
<CustomField>
    <fullName>IATA_Code__c</fullName>
    <label>IATA_Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>