force-app/main/default/objects/UserManagementTemp__c/fields/Taxid__c.field-meta.xml
<CustomField>
    <fullName>Taxid__c</fullName>
    <label>Taxid</label>
    <length>255</length>
    <type>Text</type>
</CustomField>