force-app/main/default/objects/UserManagementTemp__c/fields/User_Management__c.field-meta.xml
<CustomField>
    <fullName>User_Management__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>User Management</label>
    <referenceTo>UserManagement__c</referenceTo>
    <relationshipLabel>User Management Temps</relationshipLabel>
    <relationshipName>User_Management_Temps</relationshipName>
    <type>Lookup</type>
</CustomField>